2012-06-21 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCralloc.hpp,
	  src/port.h,
	  src/xa51/main.c,
	  src/mcs51/main.c,
	  src/ds390/main.c,
	  src/pic14/main.c,
	  src/pic16/main.c,
	  src/z80/main.c,
	  src/z80/ralloc2.cc,
	  src/hc08/main.c,
	  src/hc08/ralloc2.cc:
	  Nice fix for bug #3536902.

2012-06-21 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCralloc.hpp,
	  src/z80/ralloc2.c,
	  src/z80/ralloc.h:
	  Ugly hack to fix bug #3536902.

2012-06-20 Leland Morrison <enigmalee AT sourceforge.net>

	* sim/ucsim/z80.src/inst_r2k.cc:
	  Fix flags for rl de, rr d, rr hl (merged by Philipp Klaus Krause from smallopts branch).

2012-06-21 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Fix spilling of comitted pair after ex (sp), dd.

2012-06-21 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/include/mcs51/cc2530.h: renamed TR0 to TESTREG0

2012-06-21 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Use destructive increment in comparison for equality with #0xff,
	  more efficient assignment of 16-byte values,
	  fix spilling of comitted pair after ex (sp), dd.

2012-06-21 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Enable use of rl de in destructive and.

2012-06-20 Leland Morrison <enigmalee AT sourceforge.net>

	* sim/ucsim/z80.src/inst_r2k.cc:
	  Fix flags for rl de, rr d, rr hl.

2012-06-20 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Improve destructive and.

2012-06-19 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/peeph-z80.def,
	  src/z80/peeph-r2k.def:
	  Minor peephole fix.

2012-06-19 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  More efficient assignment for global variables.

2012-06-19 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Fix bug in & 0x8000 with ifx for unsigned int.

2012-06-19 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Refactor code for setup for built-in memcpy(),
	  use ex de, hl in register move,